@@ -165,24 +165,22 @@ class SyntaxData(syndata.SyntaxDataBase):
 
 #---- End Required Module Functions ----#
 
-def AutoIndenter(stc, pos, ichar):
-    """Auto indent cpp code. uses \n the text buffer will
-    handle any eol character formatting.
-    @param stc: EditraStyledTextCtrl
+def AutoIndenter(estc, pos, ichar):
+    """Auto indent cpp code.
+    @param estc: EditraStyledTextCtrl
     @param pos: current carat position
     @param ichar: Indentation character
-    @return: string
 
     """
     rtxt = u''
     line = stc.GetCurrentLine()
     text = stc.GetTextRange(stc.PositionFromLine(line), pos)
 
-    indent = stc.GetLineIndentation(line)
+    indent = estc.GetLineIndentation(line)
     if ichar == u"\t":
-        tabw = stc.GetTabWidth()
+        tabw = estc.GetTabWidth()
     else:
-        tabw = stc.GetIndent()
+        tabw = estc.GetIndent()
 
     i_space = indent / tabw
     ndent = u"\n" + ichar * i_space
@@ -194,4 +192,7 @@ def AutoIndenter(stc, pos, ichar):
     if text.endswith('{') or blk_pat.match(text) or text == 'else':
         rtxt += ichar
 
-    return rtxt
+    # EOL correction
+    txt = rtxt.replace(u'\n', estc.GetEOLChar())
+    # Put text in the buffer
+    estc.AddText(txt)
